--- a/FrontEnd/voting-app/src/index.css
+++ b/FrontEnd/voting-app/src/index.css
@@ -8,10 +8,18 @@ body {
   width: 100vw;
   height: 100vh;
   flex-direction: column;
+  background-color: #6d706e;
 }
 
 .container {
   width: 80%;
   margin: 0 auto;
   padding: 15px 15px;
+}
+
+.main {
+  flex: 4;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
 }
